; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kgssapi/krb5/extr_kcrypto.c_krb5_get_usage_key.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kgssapi/krb5/extr_kcrypto.c_krb5_get_usage_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.krb5_key_state = type { i32, %struct.krb5_encryption_class* }
%struct.krb5_encryption_class = type { i32 }

@EC_DERIVED_KEYS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.krb5_key_state* (%struct.krb5_key_state*, i32, i32)* @krb5_get_usage_key to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.krb5_key_state* @krb5_get_usage_key(%struct.krb5_key_state* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.krb5_key_state*, align 8
  %5 = alloca %struct.krb5_key_state*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.krb5_encryption_class*, align 8
  %9 = alloca [5 x i32], align 16
  store %struct.krb5_key_state* %0, %struct.krb5_key_state** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %10 = load %struct.krb5_key_state*, %struct.krb5_key_state** %5, align 8
  %11 = getelementptr inbounds %struct.krb5_key_state, %struct.krb5_key_state* %10, i32 0, i32 1
  %12 = load %struct.krb5_encryption_class*, %struct.krb5_encryption_class** %11, align 8
  store %struct.krb5_encryption_class* %12, %struct.krb5_encryption_class** %8, align 8
  %13 = load %struct.krb5_encryption_class*, %struct.krb5_encryption_class** %8, align 8
  %14 = getelementptr inbounds %struct.krb5_encryption_class, %struct.krb5_encryption_class* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @EC_DERIVED_KEYS, align 4
  %17 = and i32 %15, %16
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %36

19:                                               ; preds = %3
  %20 = load i32, i32* %6, align 4
  %21 = ashr i32 %20, 24
  %22 = getelementptr inbounds [5 x i32], [5 x i32]* %9, i64 0, i64 0
  store i32 %21, i32* %22, align 16
  %23 = load i32, i32* %6, align 4
  %24 = ashr i32 %23, 16
  %25 = getelementptr inbounds [5 x i32], [5 x i32]* %9, i64 0, i64 1
  store i32 %24, i32* %25, align 4
  %26 = load i32, i32* %6, align 4
  %27 = ashr i32 %26, 8
  %28 = getelementptr inbounds [5 x i32], [5 x i32]* %9, i64 0, i64 2
  store i32 %27, i32* %28, align 8
  %29 = load i32, i32* %6, align 4
  %30 = getelementptr inbounds [5 x i32], [5 x i32]* %9, i64 0, i64 3
  store i32 %29, i32* %30, align 4
  %31 = load i32, i32* %7, align 4
  %32 = getelementptr inbounds [5 x i32], [5 x i32]* %9, i64 0, i64 4
  store i32 %31, i32* %32, align 16
  %33 = load %struct.krb5_key_state*, %struct.krb5_key_state** %5, align 8
  %34 = getelementptr inbounds [5 x i32], [5 x i32]* %9, i64 0, i64 0
  %35 = call %struct.krb5_key_state* @krb5_derive_key(%struct.krb5_key_state* %33, i32* %34, i32 5)
  store %struct.krb5_key_state* %35, %struct.krb5_key_state** %4, align 8
  br label %41

36:                                               ; preds = %3
  %37 = load %struct.krb5_key_state*, %struct.krb5_key_state** %5, align 8
  %38 = getelementptr inbounds %struct.krb5_key_state, %struct.krb5_key_state* %37, i32 0, i32 0
  %39 = call i32 @refcount_acquire(i32* %38)
  %40 = load %struct.krb5_key_state*, %struct.krb5_key_state** %5, align 8
  store %struct.krb5_key_state* %40, %struct.krb5_key_state** %4, align 8
  br label %41

41:                                               ; preds = %36, %19
  %42 = load %struct.krb5_key_state*, %struct.krb5_key_state** %4, align 8
  ret %struct.krb5_key_state* %42
}

declare dso_local %struct.krb5_key_state* @krb5_derive_key(%struct.krb5_key_state*, i32*, i32) #1

declare dso_local i32 @refcount_acquire(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
